# BeachBook

./: .replit  app.py  config.py  er.name  llama_service.py  main.py  pyproject.toml  test_graph_rag.py  test_neo4j.py
attached_assets/: document-processor.py  llama-service.py  semantic-processor.py
models/: journal.py
routes/: journal_routes.py
services/: document_processor.py  graph_service.py  llama_service.py  query_templates.py  schema_proposals.py  semantic_processor.py  test_data.py
static/css/: custom.css
static/js/: App.jsx  graph_visualization.js
static/js/components/: DocumentUpload.jsx  ForceGraph.jsx  QueryPanel.jsx
storage/: base.py  factory.py  neo4j_impl.py  replit_storage_impl.py
templates/: base.html  index.html  journal.html
uploads/: How_Language_Shapes_Your_World_and_Relationships.txt  Measuring_Your_Expertise_Matching_Intentions_with_Outcomes_for_Athlete_Success.txt  The_Spectrum_of_Spinal_Positions_Embracing_Complexity_and_Unlocking_Movement_Potential.txt  mobile_schedule.txt
