[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "llama-index-graph-stores-neo4j>=0.4.6",
    "llama-index>=0.12.24",
    "openai>=1.66.3",
    "psycopg2-binary>=2.9.10",
    "py2neo>=2021.2.4",
]
