[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "llama-index-graph-stores-neo4j>=0.4.6",
    "llama-index>=0.12.24",
    "openai>=1.66.3",
    "psycopg2-binary>=2.9.10",
    "py2neo>=2021.2.4",
    "llama-index-core>=0.12.24.post1",
    "anthropic>=0.49.0",
    "spacy>=3.8.4",
    "nltk>=3.9.1",
    "twilio>=9.5.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
